# maglogic

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  README.md  SSOT.md  pyproject.toml  requirements.txt  service-metadata.yaml  setup.py
.claude/: CLAUDE.md  settings.json
.cursor/: rules.md
.github/workflows/: ci.yml  docs-doctrine.yml  docs.yml  test.yml
docker/: Dockerfile.analysis  Dockerfile.docs  Dockerfile.mumax3  Dockerfile.oommf  docker-compose.yml
docs/: INDEX.md  README.md  README_DOCS.md  README_JUPYTER.md  architecture.md  deployment.md  troubleshooting.md  usage.md
docs/architecture/: STRUCTURE_DECISION.md
docs/operations/: SYNC.md
python/maglogic/: __init__.py
python/maglogic/analysis/: magnetization.py
python/maglogic/parsers/: mumax3_parser.py  oommf_parser.py
python/maglogic/simulation/: oommf_runner.py
python/maglogic/visualization/: __init__.py
python/tests/: conftest.py  test_analysis.py  test_constants.py  test_magnetization.py  test_simulation.py  test_validators.py
reports/: README.md
scripts/: github-sync-report.mjs  validate-structure.py
